--- a/index.html
+++ b/index.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Analiza terenu</title>
+    <title>PROGRAMOWANIE GEOPORTALI</title>
+    <meta name="description" content="Strona internetowa o charakterze edukacyjnym stanowiąca część projektu">
+	<meta name="keywords" content="geodezja, geoinformatyka, topografia, kartografia wojskowa, analizy terenu, ocena terenu, geografia wojskowa"> 
+
     <meta name="author" content="Ewa" />
-  </head>
+    <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script><![endif]-->
+<link href="https://fonts.googleapis.com/css?family=Lato:400,700|Open+Sans&amp;subset=latin-ext" rel="stylesheet">
+<link rel="stylesheet" href="main.css">
+<header>
+    <div id="logotyp">
+        <h1 class="logo"> <span style="color:#2a5daf">PROGRA</span>MOWANIE 
+            <span style="color:#2a5daf">GEOPOR</span>TALI
+        </h1>
+    </div>
+    <header>
+
+
+</head>
   <body>
-ANALIZA TERENU PROJEKT
+PROGRAMOWANIE GEOPORTALI
   </body>
 </html>
