--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script><![endif]-->
 <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Open+Sans&amp;subset=latin-ext" rel="stylesheet">
 <link rel="stylesheet" href="main.css">
-
-
 </head>
+
   <body>
 <div id="logotyp">
     <h1 class="logo"> <span style="color:#2a5daf">PROGRA</span>MOWANIE
@@ -22,4 +21,14 @@
     </h1>
 </div>
   </body>
+
+  <nav>
+    <ul class="menu">
+      <li><a href="#">Strona glowna</a></li>
+      <li><a href="#">O projekcie</a></li>
+      <li><a href="#">Materiały</a></li>
+      <li><a href="#">Kontakt</a></li>
+    </ul>
+  </nav>
+  
 </html>
