--- a/index.html
+++ b/index.html
@@ -30,5 +30,27 @@
       <li><a href="#">Kontakt</a></li>
     </ul>
   </nav>
-  
+
+
+<!--container-->
+<div class="categories">
+  <header>
+    <h1> Witaj na stronie!</h1>
+    <p>Zapraszam do zapoznania się z materiałami umieszczonymi na stronie :)</p>
+  </header>
+
+  <div class="subject">
+    <figure>
+      <a href="#">
+        <img src="img/terrain.jpg "></a>
+    </figure>
+  </div>
+  <div class="subject">
+    <figure>
+      <a href="#">
+        <img src="img/terrain.jpg "></a>
+    </figure>
+  </div>
+  </div>
+
 </html>
