--- a/projekt/kontakt.html
+++ b/projekt/kontakt.html
@@ -19,11 +19,11 @@
 <body>
 
 	<header>
-		<div id="logotyp">
-			<h1 class="logo">
-				PROGRAMOWANIE GEOPORTALI
-			</h1>
-		</div>
+<div id="logotyp">
+	<h1 class="logo"> <span style="color:#000000">PROGRA</span>MOWANIE
+		<span style="color:#000000">GEOPOR</span>TALI
+	</h1>
+</div>
 	</header>
 
 	<nav>
